# carry

./: README.md  imgui.ini  r5
android_controller/: CMakeLists.txt  package.xml
arduino_motor_controller/: arduino_motor_controller.ino
autonomous_controller/: CMakeLists.txt  package.xml
carry_robot/: CMakeLists.txt  package.xml
carry_simple_joy_differential/: Readme  carry_simple_joy_differential.py  robot
config/: 20-video.rules  30-video.rules  40-persistent-ftdi.rules  99-realsense-libusb.rules  rs435_420.json
depth_image_formatter/: CMakeLists.txt  package.xml
depth_image_publisher/: CMakeLists.txt  package.xml
depth_image_sender/: CMakeLists.txt  package.xml
disparityimage_to_laserscan/: CMakeLists.txt  nodelets.xml  package.xml
disparityimage_to_laserscan/cfg/: Depth.cfg
disparityimage_to_laserscan/include/disparityimage_to_laserscan/: DisparityImageToLaserScan.h  DisparityImageToLaserScanROS.h  depth_traits.h
disparityimage_to_laserscan/src/: DisparityImageToLaserScan.cpp  DisparityImageToLaserScanNodelet.cpp  DisparityImageToLaserScanROS.cpp  disparityimage_to_laserscan.cpp
disparityimage_to_laserscan/test/: DisparityImageToLaserScanTest.cpp  disparityimage_to_laserscan_rostest.cpp
face_detection/: CMakeLists.txt  package.xml
image_publisher/: CMakeLists.txt  package.xml
image_sender/: CMakeLists.txt  package.xml
joystick_controller/: CMakeLists.txt  package.xml
laser_formatter/: CMakeLists.txt  package.xml
launch/: camera4.launch  camera_0.launch  camera_2.launch  carry_tf.launch  odbot_obstacle_avoidance.launch  record_depth.launch  record_simulation.launch  rs435.launch  transforms.launch
marker_follower/: CMakeLists.txt  package.xml
motor_controller/: CMakeLists.txt  motor_control.ino  motor_control_bak (copy).ino  motor_control_bak.ino  package.xml
neurobot_receiver/: CMakeLists.txt  package.xml
notes/: .odometry_numbers.swp  .~lock.motor_speed#  joystick.state  motor_speed  odometry_numbers  ps3_joystick_mapping
obstable_detector/: CMakeLists.txt  package.xml
odom_generator/: CMakeLists.txt  package.xml
remote_controller/: CMakeLists.txt  package.xml
robot_state/: CMakeLists.txt  package.xml
rviz/: d435_depth_laser_map.rviz  ps4_stereo_laser.rviz  simulator_depth_laser_map.rviz
scripts/: a1  a3  a4  a8  ardu  arduino  bash_disparity  bash_gps  bash_killall  bash_left  bash_record  bash_roscore  bash_uvc  buildall  c  c1  c4  c_clean  calibrate  calibrate_mono  calibrate_stereo  (+61 more)
(+174 files in other folders)
